tests/compile_fail/state/substate_impl_on_qualified.stderr
error: `moku::Substate` must be implemented on a plain struct
       You may also use a type alias: `type MyState = Option<bool>;`
  --> tests/compile_fail/state/substate_impl_on_qualified.rs:15:28
   |
15 |     impl Substate<Top> for super::blinky::Bottom {}
   |                            ^^^^^
